<resources>
    <string name="app_name">Whiskeynote</string>
    <string name="title_activity_scotches">ScotchesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">No Data</string>
    <string name="scotch">Scotch</string>
    <string name="aew_title">Insert New Whiskey</string>
    <string name="aew_name">Name</string>
    <string name="aew_kind">Kind</string>
    <string name="aew_price">Price</string>
    <string name="per">/</string>
    <string name="aew_ml">ml</string>
    <string name="aew_fragrance">Fragrance</string>
    <string name="aew_taste">Taste</string>
    <string name="aew_aftertaste">Aftertaste</string>

    <string name="huga">huga</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="aew_memo">Memo</string>
    <string-array name="hoge">
        <item>h</item>
        <item>ho</item>
        <item>hog</item>
        <item>hoge</item>
    </string-array>
</resources>
