<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/aew_appbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:id="@+id/aew_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:text="@string/aew_title"
                android:textColor="#ffffff"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="24dp" />

        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aew_appbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/aew_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:background="@color/colorSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/aew_iv"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingTop="@dimen/aew_list_margin"
                android:paddingEnd="24dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aew_name"
                    app:helperText="ウイスキーの銘柄や名前を入力してください">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_kind"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/aew_list_margin"
                    android:hint="@string/aew_kind"
                    app:helperText="ウイスキーの種類を入力してください">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_price"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/aew_list_margin"
                        android:hint="@string/aew_price"
                        app:helperText="ウイスキーの値段">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:inputType="number"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_marginTop="12dp"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/per"
                        android:textColor="@color/colorPrimary" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_ml"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/aew_list_margin"
                        android:gravity="end"
                        android:hint="@string/aew_ml"
                        app:helperText="ウイスキーの内容量">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:inputType="number"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_fragrance"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/aew_list_margin"
                    android:hint="@string/aew_fragrance"
                    app:helperText="ウイスキーの香りを入力してください">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_taste"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/aew_list_margin"
                    android:hint="@string/aew_taste"
                    app:helperText="ウイスキーの味を入力してください">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_aftertaste"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/aew_list_margin"
                    android:hint="@string/aew_aftertaste"
                    app:helperText="ウイスキーの後味を入力してください">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_memo"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/aew_list_margin"
                    android:hint="@string/aew_memo"
                    app:helperText="気になることをなんでも入力してください">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hello world"/>

                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/aew_list_margin">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_save"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_toStartOf="@id/btn_cancel"
                        android:text="@string/save"
                        android:textColor="@color/colorBackground"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:backgroundTint="@color/colorPrimary"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_cancel"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/cancel"
                        android:textColor="@color/colorPrimary" />

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>